# sphinx-gherkin-feature

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst
src/sphinx_gherkin_feature/: __init__.py  directives.py  domain.py  lexer.py  lint.py  source.py  writer.py
tests/: test_filename_validation.py  test_lexer.py  test_lint_bridge.py  test_source.py  test_sphinx_build.py  test_writer.py
