[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "sphinx-gherkin-feature"
version = "0.1.3"
description = "Render Gherkin feature scripts in Sphinx and optionally write them as .feature files."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Your Name" }
]
keywords = ["sphinx", "gherkin", "bdd", "cucumber", "documentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "Sphinx>=7.2",
  "Pygments>=2.14",
  "requests<2.34",
  "gherkin-lint",
]

[project.optional-dependencies]
docs = [
  "furo>=2024.8.6",
]

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.6",
  "twine>=5",
]
docs = [
  "furo>=2024.8.6",
]

[project.urls]
Homepage = "https://github.com/your-org/sphinx-gherkin-feature"
Repository = "https://github.com/your-org/sphinx-gherkin-feature"
Issues = "https://github.com/your-org/sphinx-gherkin-feature/issues"

[tool.uv]
package = true

[tool.uv.sources]
gherkin-lint = { git = "https://github.com/procitec/gherkin-lint.git", tag = "v26.1.1" }

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_gherkin_feature"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
